# odette_C

./: CMakeLists.txt  README.md  gauss_tle_test.cpp  main.cpp
Eigen/unsupported/Eigen/: Polynomials
data_files/: orbit_gauss.json  orbit_sgp4.csv  orbit_sgp4.json  orbital_elements_mse.txt  sgp4_vs_rk45.txt  tle_altitude_test.txt  tle_jason3.json  tle_sentinel3b.json
data_files/data/Jason/: 20240318_16002A_A02.tdm  20240318_16002A_A04.tdm  20240318_16002A_A11.tdm  20240318_16002A_B03.tdm  20240318_16002A_B05.tdm
data_files/data/Sentinel_3B/: 20240318_18039A_A05.tdm  20240318_18039A_B02.tdm  20240318_18039A_B06.tdm
include/: SGP4.h  TDMParser.h  atmosphere.h  frame.h  iers_coef.h  interpret.h  json.h  logging.h  lunar_position.h  orbmath.h  orbmath_nutation.h  orbmath_perturbation.h  propagator.h  solar_position.h
src/: RADec.cpp  SGP4.cpp  TDMParser.cpp  TLE.cpp  interpret.cpp  orbmath.cpp  propagator.cpp
